# Noisy_Regression

./: .gitignore  Noisy_BNN.ipynb  Noisy_BNN2.ipynb  Noisy_BNN3.ipynb  Noisy_BNN4.ipynb  Noisy_BNN5.ipynb  Noisy_BNN6.ipynb  Noisy_BNN7.ipynb  Noisy_KAN.ipynb  Noisy_MLP-Laplace.ipynb  Noisy_MLP-MCD.ipynb  Noisy_MLP.ipynb  Noisy_MLP2.ipynb  Noisy_NDE.ipynb  README.md  data.parquet  pyproject.toml
gen_noisy/: Cargo.toml
gen_noisy/src/: main.rs
